# webcc-integration

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/my_project/: CMakeLists.txt  main.cpp
